# python-data-pipeline

./: .flake8  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pipeline/: __init__.py  cleaner.py  transformer.py
scraper/: __init__.py  scraper.py
tests/: __init__.py  conftest.py  test_main.py  test_pipeline.py  test_scraper.py  test_transformer.py  test_visualizer.py
visualizer/: __init__.py  charts.py
